infrastructure/k8s/database-migrations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-migrations-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: database-migrations
  template:
    metadata:
      labels:
        component: database-migrations
    spec:
      containers:
      - name: database-migrations
        image: balbains2/pokecentre-database-migrations
        ports:
        - containerPort: 8000
