infrastructure/k8s/trainer-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainer-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: trainer
  template:
    metadata:
      labels:
        component: trainer
    spec:
      containers:
      - name: trainer
        image: balbains2/pokecentre-trainers
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: trainer-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: trainer
  ports:
  - port: 5000
    targetPort: 5000
